feat: get book resources with the corresponding filters
