# src/main/java/api/prog5/bookwel/endpoint/rest/mapper/BookMapper.java
@@ -1,0 +1,20 @@
+package api.prog5.bookwel.endpoint.rest.mapper;
+
+import api.prog5.bookwel.endpoint.rest.model.Book;
+import lombok.AllArgsConstructor;
+import org.springframework.stereotype.Component;
+
+@Component
+@AllArgsConstructor
+public class BookMapper {
+
+    public Book toRest(api.prog5.bookwel.model.Book domain){
+        return Book.builder()
+                .id(domain.getId())
+                .author(domain.getAuthor())
+                .fileLink(domain.getFileLink())
+                .category(domain.getCategory().getName())
+                .build();
+    }
+
+}
